--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "ngh": "node --max_old_space_size=4000 node_modules/@angular/cli/bin/ng",
     "ngh-serve": "npm run ngh serve",
     "start": "node server.js",
-    "build": "ng build",
+    "build": "ng build --prod --aot",
     "test": "ng test",
     "test-coverage": "ng test --code-coverage",
     "lint": "ng lint",
