--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "ngx-bootstrap": "^6.1.0",
     "ngx-duration-picker": "^3.2.0",
     "ngx-mathjax": "0.0.13",
+    "npm": "^7.8.0",
     "path": "^0.12.7",
     "pouchdb": "^7.2.2",
     "quagga": "^0.12.1",
