--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,6 +2,8 @@ name: CI
 on:
   push:
     branches: [ main ]
+  pull_request: 
+    branches: [ main, develop]
 jobs:
   build:
     runs-on: ubuntu-latest
