--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -9,18 +9,18 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - name: Action Checkout
-      uses: actions/checkout@v1
-    - name: Action Node
-      uses: actions/setup-node@v1 #this will install Node and npm on Ubuntu
+    - uses: actions/checkout@v1
+    - uses: actions/setup-node@v1 #this will install Node and npm on Ubuntu
       with:
         node-version: '14.x'
-    - name: Install Packages
-      run: |
-        npm install
-        npm i -g @angular/cli
-        npm i coveralls
-    - name: Run Tests and Generate code coverage
-      run: npm run test -- --watch=false --no-progress --browsers=ChromeHeadlessNoSandbox --code-coverage
-    - name: Build app
+    - run: npm install
+    - run: npm i -g @angular/cli
+    - run: npm i coveralls
+    - run: npm run test -- --watch=false --no-progress --browsers=ChromeHeadlessNoSandbox --code-coverage
     - run: ng build --prod --output-path=dist --base-href="https://furahasolutions.github.io/FSMS-frontend/"
+    - name: Publish generated content to GitHub Pages
+      uses: tsunematsu21/actions-publish-gh-pages@v1.0.1
+      with:
+          dir: dist
+          branch: gh-pages
+          token: ${{ secrets.ACCESS_TOKEN }}
