--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -7,7 +7,8 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
-
+    env:
+      CC_TEST_REPORTER_ID: d667f8ab675dcfb424b150f5942668f8d0827c9eadda936a03840e1194b68341
     steps:
     - uses: actions/checkout@v1
     - uses: actions/setup-node@v1 #this will install Node and npm on Ubuntu
@@ -17,4 +18,5 @@ jobs:
     - run: npm i -g @angular/cli
     - run: npm i coveralls
     - run: npm run test -- --watch=false --no-progress --browsers=ChromeHeadlessNoSandbox --code-coverage
-    - run: ng build --prod --output-path=dist --base-href="https://furahasolutions.github.io/FSMS-frontend/"
+    - run: ng build --prod
+    - run: cat ./coverage/lcov.info | coveralls
