--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -25,7 +25,7 @@ jobs:
     - run: ./cc-test-reporter before-build
     - run: npm install
     - run: npm i -g @angular/cli
-    - run: npm i coveralls
+    - run: npm i -g coveralls
     - run: npm run test -- --watch=false --no-progress --browsers=ChromeHeadlessNoSandbox --code-coverage
     - run: ng build --prod
     - run: cat ./coverage/lcov.info | coveralls
