--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "engines": {
     "node": "14.15.4",
-    "npm": "7.10.0"
+    "npm": "7.11.2"
   },
   "name": "furaha-app",
   "version": "0.0.0",
@@ -22,19 +22,19 @@
   "dependencies": {
     "@angular-devkit/architect": "^0.1102.9",
     "@angular-devkit/build-angular": "~0.1102.11",
-    "@angular/animations": "~11.2.11",
-    "@angular/cdk": "^11.2.10",
-    "@angular/cli": "~11.2.9",
-    "@angular/common": "~11.2.11",
-    "@angular/compiler": "~11.2.11",
-    "@angular/compiler-cli": "~11.2.11",
-    "@angular/core": "~11.2.11",
-    "@angular/forms": "~11.2.11",
-    "@angular/platform-browser": "~11.2.11",
-    "@angular/platform-browser-dynamic": "~11.2.11",
-    "@angular/pwa": "^0.1102.9",
-    "@angular/router": "~11.2.11",
-    "@angular/service-worker": "^11.2.11",
+    "@angular/animations": "~11.2.12",
+    "@angular/cdk": "^11.2.11",
+    "@angular/cli": "~11.2.11",
+    "@angular/common": "~11.2.12",
+    "@angular/compiler": "~11.2.12",
+    "@angular/compiler-cli": "~11.2.12",
+    "@angular/core": "~11.2.12",
+    "@angular/forms": "~11.2.12",
+    "@angular/platform-browser": "~11.2.12",
+    "@angular/platform-browser-dynamic": "~11.2.12",
+    "@angular/pwa": "^0.1102.11",
+    "@angular/router": "~11.2.12",
+    "@angular/service-worker": "^11.2.12",
     "@dimakorotkov/tinymce-mathjax": "^1.0.7",
     "@ng-select/ng-select": "^6.1.0",
     "@ngrx/component": "^11.1.1",
@@ -43,49 +43,47 @@
     "@ngrx/store": "^11.1.1",
     "@ngrx/store-devtools": "^11.1.1",
     "@ngx-translate/core": "^13.0.0",
-    "@tinymce/tinymce-angular": "^4.2.0",
+    "@tinymce/tinymce-angular": "^4.2.2",
     "@types/mathjax": "0.0.36",
     "@types/pouchdb": "^6.4.0",
-    "bootstrap": "^4.5.2",
+    "bootstrap": "^4.6.0",
     "express": "^4.17.1",
     "flag-icon-css": "^3.5.0",
     "google-libphonenumber": "^3.2.19",
-    "mathjax": "^3.1.2",
-    "ng2-pdf-viewer": "^6.3.2",
-    "ngx-bootstrap": "^6.1.0",
+    "mathjax": "^3.1.4",
+    "ng2-pdf-viewer": "^6.4.1",
+    "ngx-bootstrap": "^6.2.0",
     "ngx-duration-picker": "^3.2.0",
     "ngx-mathjax": "0.0.13",
     "path": "^0.12.7",
     "pouchdb": "^7.2.2",
     "quagga": "^0.12.1",
     "rxjs": "~6.6.7",
-    "snyk": "^1.563.0",
-    "tinymce": "^5.4.2",
+    "snyk": "^1.574.0",
+    "tinymce": "^5.7.1",
     "tslib": "^2.2.0",
-    "tslint": "^6.1.3",
     "typescript": "4.1.5",
     "zone.js": "~0.11.1"
   },
   "devDependencies": {
-    "@angular-eslint/builder": "^4.0.0",
-    "@angular-eslint/eslint-plugin": "^4.0.0",
-    "@angular-eslint/eslint-plugin-template": "^4.0.0",
-    "@angular-eslint/schematics": "^4.0.0",
-    "@angular-eslint/template-parser": "^4.0.0",
-    "@angular/language-service": "~11.2.11",
+    "@angular-eslint/builder": "^4.2.0",
+    "@angular-eslint/eslint-plugin": "^4.2.0",
+    "@angular-eslint/eslint-plugin-template": "^4.2.0",
+    "@angular-eslint/schematics": "^4.2.0",
+    "@angular-eslint/template-parser": "^4.2.0",
+    "@angular/language-service": "~11.2.12",
     "@ngrx/schematics": "^11.1.1",
-    "@types/jasmine": "^3.6.9",
-    "@types/jasminewd2": "~2.0.3",
-    "@types/node": "^14.14.41",
+    "@types/jasmine": "^3.6.10",
+    "@types/jasminewd2": "~2.0.8",
+    "@types/node": "^15.0.1",
     "@typescript-eslint/eslint-plugin": "4.22.0",
     "@typescript-eslint/parser": "4.22.0",
-    "codelyzer": "^6.0.0",
-    "eslint": "^7.24.0",
+    "eslint": "^7.25.0",
     "eslint-plugin-import": "2.22.1",
-    "eslint-plugin-jsdoc": "32.3.0",
+    "eslint-plugin-jsdoc": "33.0.0",
     "eslint-plugin-prefer-arrow": "1.2.3",
     "jasmine-core": "~3.7.1",
-    "jasmine-spec-reporter": "~7.0.0",
+    "jasmine-spec-reporter": "7.0.0",
     "karma": "^6.3.2",
     "karma-chrome-launcher": "~3.1.0",
     "karma-coverage-istanbul-reporter": "^3.0.3",
@@ -93,7 +91,7 @@
     "karma-jasmine-html-reporter": "^1.5.4",
     "karma-verbose-reporter": "0.0.6",
     "protractor": "^7.0.0",
-    "ts-node": "^9.0.0"
+    "ts-node": "^9.1.1"
   },
   "snyk": true
 }
