--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -29,4 +29,4 @@ jobs:
     - run: npm run test -- --watch=false --no-progress --browsers=ChromeHeadlessNoSandbox --code-coverage
     - run: ng build --prod
     - run: npm run lint --fix
-    - run: cat ./coverage/lcov.info | coveralls
+    - run: cat ./coverage/report-lcov/lcov.info | coveralls
