--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -1,4 +1,4 @@
-name: CI
+name: Test
 on:
   push:
     branches: [ main ]
@@ -27,6 +27,4 @@ jobs:
     - run: npm i -g @angular/cli
     - run: npm i -g coveralls
     - run: npm run test -- --watch=false --no-progress --browsers=ChromeHeadlessNoSandbox --code-coverage
-    - run: ng build --prod
-    - run: npm run lint --fix
     - run: cat ./coverage/report-lcov/lcov.info | coveralls
