--- a/angular.json
+++ b/angular.json
@@ -60,6 +60,29 @@
             ]
           },
           "configurations": {
+            "development": {
+              "optimization": true,
+              "outputHashing": "all",
+              "sourceMap": false,
+              "namedChunks": false,
+              "aot": true,
+              "extractLicenses": true,
+              "vendorChunk": false,
+              "buildOptimizer": true,
+              "budgets": [
+                {
+                  "type": "initial",
+                  "maximumWarning": "2mb",
+                  "maximumError": "5mb"
+                },
+                {
+                  "type": "anyComponentStyle",
+                  "maximumWarning": "6kb",
+                  "maximumError": "10kb"
+                }
+              ],
+              "serviceWorker": false
+            },
             "production": {
               "fileReplacements": [
                 {
@@ -101,8 +124,12 @@
           "configurations": {
             "production": {
               "browserTarget": "furaha-sms:build:production"
+            },
+            "development": {
+              "browserTarget": "furaha-sms:build:development"
             }
-          }
+          },
+          "defaultConfiguration": "development"
         },
         "extract-i18n": {
           "builder": "@angular-devkit/build-angular:extract-i18n",
