updated angular packages

--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "ng": "ng",
     "serve": "ng serve",
     "start": "node server.js",
-    "build": "ng build --prod --aot",
+    "build": "ng build --configuration production --aot",
     "test": "ng test",
     "test-coverage": "ng test --code-coverage",
     "lint": "ng lint",
@@ -20,21 +20,21 @@
   },
   "private": true,
   "dependencies": {
-    "@angular-devkit/architect": "^0.1200.3",
-    "@angular-devkit/build-angular": "~12.0.3",
-    "@angular/animations": "~12.0.3",
-    "@angular/cdk": "^12.0.3",
-    "@angular/cli": "~12.0.3",
-    "@angular/common": "~12.0.3",
-    "@angular/compiler": "~12.0.3",
-    "@angular/compiler-cli": "~12.0.3",
-    "@angular/core": "~12.0.3",
-    "@angular/forms": "~12.0.3",
-    "@angular/platform-browser": "~12.0.3",
-    "@angular/platform-browser-dynamic": "~12.0.3",
+    "@angular-devkit/architect": "^0.1202.4",
+    "@angular-devkit/build-angular": "~12.2.4",
+    "@angular/animations": "~12.2.4",
+    "@angular/cdk": "^12.2.4",
+    "@angular/cli": "~12.2.4",
+    "@angular/common": "~12.2.4",
+    "@angular/compiler": "~12.2.4",
+    "@angular/compiler-cli": "~12.2.4",
+    "@angular/core": "~12.2.4",
+    "@angular/forms": "~12.2.4",
+    "@angular/platform-browser": "~12.2.4",
+    "@angular/platform-browser-dynamic": "~12.2.4",
     "@angular/pwa": "^12.0.3",
-    "@angular/router": "~12.0.3",
-    "@angular/service-worker": "^12.0.3",
+    "@angular/router": "~12.2.4",
+    "@angular/service-worker": "^12.2.4",
     "@fortawesome/angular-fontawesome": "^0.9.0",
     "@fortawesome/fontawesome-svg-core": "^1.2.35",
     "@fortawesome/free-solid-svg-icons": "^5.15.3",
@@ -68,9 +68,9 @@
     "@angular-eslint/builder": "^12.1.0",
     "@angular-eslint/eslint-plugin": "^12.1.0",
     "@angular-eslint/eslint-plugin-template": "^12.1.0",
-    "@angular-eslint/schematics": "^12.1.0",
+    "@angular-eslint/schematics": "^12.3.1",
     "@angular-eslint/template-parser": "^12.1.0",
-    "@angular/language-service": "~12.0.3",
+    "@angular/language-service": "~12.2.4",
     "@ngrx/schematics": "^12.0.0",
     "@types/jasmine": "^3.7.7",
     "@types/jasminewd2": "~2.0.9",
