--- a/package.json
+++ b/package.json
@@ -32,63 +32,63 @@
     "@angular/forms": "~12.2.4",
     "@angular/platform-browser": "~12.2.4",
     "@angular/platform-browser-dynamic": "~12.2.4",
-    "@angular/pwa": "^12.0.3",
+    "@angular/pwa": "^12.2.4",
     "@angular/router": "~12.2.4",
     "@angular/service-worker": "^12.2.4",
     "@fortawesome/angular-fontawesome": "^0.9.0",
-    "@fortawesome/fontawesome-svg-core": "^1.2.35",
-    "@fortawesome/free-solid-svg-icons": "^5.15.3",
+    "@fortawesome/fontawesome-svg-core": "^1.2.36",
+    "@fortawesome/free-solid-svg-icons": "^5.15.4",
     "@ng-select/ng-select": "^6.1.0",
-    "@ngrx/component": "^12.0.0",
-    "@ngrx/effects": "^12.0.0",
-    "@ngrx/entity": "^12.0.0",
-    "@ngrx/store": "^12.0.0",
-    "@ngrx/store-devtools": "^12.0.0",
+    "@ngrx/component": "^12.4.0",
+    "@ngrx/effects": "^12.4.0",
+    "@ngrx/entity": "^12.4.0",
+    "@ngrx/store": "^12.4.0",
+    "@ngrx/store-devtools": "^12.4.0",
     "@ngx-translate/core": "^13.0.0",
     "@tinymce/tinymce-angular": "^4.2.4",
     "@types/pouchdb": "^6.4.0",
     "bootstrap": "^4.6.0",
     "express": "^4.17.1",
     "flag-icon-css": "^3.5.0",
-    "google-libphonenumber": "^3.2.21",
+    "google-libphonenumber": "^3.2.22",
     "ng2-pdf-viewer": "^7.0.1",
     "ngx-bootstrap": "^6.2.0",
-    "ngx-duration-picker": "^3.2.0",
+    "ngx-duration-picker": "^3.3.1",
     "path": "^0.12.7",
     "pouchdb": "^7.2.2",
     "quagga": "^0.12.1",
     "rxjs": "~6.6.7",
-    "snyk": "^1.622.0",
-    "tinymce": "^5.8.1",
-    "tslib": "^2.2.0",
+    "snyk": "^1.696.0",
+    "tinymce": "^5.9.1",
+    "tslib": "^2.3.1",
     "typescript": "~4.2.3",
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
-    "@angular-eslint/builder": "^12.1.0",
-    "@angular-eslint/eslint-plugin": "^12.1.0",
-    "@angular-eslint/eslint-plugin-template": "^12.1.0",
+    "@angular-eslint/builder": "^12.3.1",
+    "@angular-eslint/eslint-plugin": "^12.3.1",
+    "@angular-eslint/eslint-plugin-template": "^12.3.1",
     "@angular-eslint/schematics": "^12.3.1",
-    "@angular-eslint/template-parser": "^12.1.0",
+    "@angular-eslint/template-parser": "^12.3.1",
     "@angular/language-service": "~12.2.4",
-    "@ngrx/schematics": "^12.0.0",
-    "@types/jasmine": "^3.7.7",
-    "@types/jasminewd2": "~2.0.9",
-    "@types/node": "^15.12.1",
-    "@typescript-eslint/eslint-plugin": "^4.26.0",
-    "@typescript-eslint/parser": "^4.26.0",
-    "eslint": "^7.28.0",
-    "eslint-plugin-import": "^2.23.4",
-    "eslint-plugin-jsdoc": "^35.1.2",
+    "@ngrx/schematics": "^12.4.0",
+    "@types/jasmine": "^3.8.2",
+    "@types/jasminewd2": "^2.0.10",
+    "@types/node": "^15.14.9",
+    "@typescript-eslint/eslint-plugin": "^4.30.0",
+    "@typescript-eslint/parser": "^4.30.0",
+    "eslint": "^7.32.0",
+    "eslint-plugin-import": "^2.24.2",
+    "eslint-plugin-jsdoc": "^35.5.1",
     "eslint-plugin-prefer-arrow": "^1.2.3",
     "jasmine-core": "~3.7.1",
     "jasmine-spec-reporter": "^7.0.0",
-    "karma": "^6.3.3",
+    "karma": "^6.3.4",
     "karma-chrome-launcher": "~3.1.0",
     "karma-coverage": "^2.0.3",
     "karma-jasmine": "~4.0.1",
     "protractor": "^7.0.0",
-    "ts-node": "^10.0.0"
+    "ts-node": "^10.2.1"
   },
   "snyk": true
 }
